@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-02T08:20:27Z",
-  "count_outdated" : 305,
-  "uniques_outdated" : 168,
-  "count" : 335,
+  "timestamp" : "2022-06-02T16:23:52Z",
+  "count_outdated" : 307,
+  "uniques_outdated" : 169,
+  "count" : 336,
   "uniques" : 190,
   "clones" : [
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 12,
