@@ -1,12 +1,7 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-20T00:00:00Z",
       "count": 12,
